Removes duplication of call-ui window for a single channel

BUG: 309146
REVIEW: 116623
FIXED-IN: 0.8.1